--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<!-- <title>Conecteup</title> -->
-		<title>UNDER CONTROL TECHNOLOGY</title>
+		<title>Zazap - Plataforma de multi atendimeto</title>
 		<link
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
